--- a/federated-library-from-cdn/remoteLibrary/package.json
+++ b/federated-library-from-cdn/remoteLibrary/package.json
@@ -4,14 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "start": "rspack serve --config rspack.dev.js",
+    "legacy:start": "webpack serve --config webpack.dev.js",
+    "build": "rspack --config rspack.prod.js",
+    "legacy:build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@rspack/core": "^0.5.0",
+    "@rspack/cli": "^0.5.0",
+    "@rspack/dev-server": "^0.5.0",
     "@babel/core": "7.23.7",
     "@babel/preset-react": "7.23.3",
     "babel-loader": "8.2.5",
