Modify build and test scripts in package.json
This commit updates various scripts in multiple package.json files throughout the project. Specifically, the build and dev scripts in the next-host package.json now include the NEXT_PRIVATE_LOCAL_WEBPACK flag. The e2e:ci script in the i18next-nextjs-react package.json now runs Cypress in headless mode. Lastly, the start:live scripts in both react-host and react-remote remove the --open argument for webpack serve.

--- a/i18next-nextjs-react/next-host/package.json
+++ b/i18next-nextjs-react/next-host/package.json
@@ -2,8 +2,8 @@
   "name": "i18next-nextjs-react_next-host",
   "version": "1.0.0",
   "scripts": {
-    "dev": "rm -rf .next && PORT=3000 next dev",
-    "build": "next build",
+    "dev": "rm -rf .next && PORT=3000 NEXT_PRIVATE_LOCAL_WEBPACK=true next dev",
+    "build": "NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
     "start": "PORT=3000 next start"
   },
   "author": {
