--- a/i18next-nextjs-react/react-remote/package.json
+++ b/i18next-nextjs-react/react-remote/package.json
@@ -6,7 +6,7 @@
     "build:dev": "webpack --mode development",
     "build:start": "cd dist && PORT=3002 npx serve",
     "start": "webpack serve --open --mode development",
-    "start:live": "webpack serve --open --mode development --live-reload --hot"
+    "start:live": "webpack serve --mode development --live-reload --hot"
   },
   "license": "MIT",
   "author": {
