--- a/nextjs-ssr/package.json
+++ b/nextjs-ssr/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "postinstall": "find . -name \"node_modules\" -type d -prune -exec rm -rf '{}' +; pnpm install --ignore-scripts",
+    "preinstall": "find . -name \"noexist\" -type d -prune -exec rm -rf '{}' +; pnpm install --ignore-scripts",
     "start": " pnpm --parallel --filter nextjs-ssr_* dev",
     "build": "pnpm --parallel --filter nextjs-ssr_* build",
     "serve": "pnpm --parallel --filter nextjs-ssr_* start",
