--- a/angular14-react/angular-profile/package.json
+++ b/angular14-react/angular-profile/package.json
@@ -2,7 +2,7 @@
   "name": "angular14-react_angular-profile",
   "version": "0.0.0",
   "scripts": {
-    "postinstall": "find . -name \"node_modules\" -type d -prune -exec rm -rf '{}' +; pnpm install --ignore-scripts",
+    "preinstall": "find . -name \"noexist\" -type d -prune -exec rm -rf '{}' +; pnpm install --ignore-scripts",
     "ng": "ng",
     "start": "ng serve -o",
     "build": "ng build",
