Update Next.js config and add new dependency
Updated the build and dev scripts in the package.json files of the host and remote to include NEXT_PRIVATE_LOCAL_WEBPACK, providing local webpack configuration. Also, updated the NextFederationPlugin in the next.config file and removed the skipSharingNextInternals option. Added the "wait-on" dependency in the devDependencies of the package.json file.

--- a/react-nextjs/react-host-nextjs-remote/remote/package.json
+++ b/react-nextjs/react-host-nextjs-remote/remote/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8081",
-    "build": "next build",
+    "dev": "NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 8081",
+    "build": "NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
     "start": "next start",
     "lint": "next lint"
   },
