--- a/react-nextjs/nextjs-host-react-remote/host/package.json
+++ b/react-nextjs/nextjs-host-react-remote/host/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "next dev -p 8080",
-    "build": "next build",
+    "start": "NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 8080",
+    "build": "NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
     "start:prod": "next start",
     "lint": "next lint"
   },
