--- a/modernjs/provider/package.json
+++ b/modernjs/provider/package.json
@@ -36,6 +36,7 @@
     "@modern-js/eslint-config": "2.45.0",
     "@modern-js/tsconfig": "2.45.0",
     "@modern-js-app/eslint-config": "2.45.0",
+    "@modern-js/builder-rspack-provider": "2.45.0",
     "lint-staged": "13.3.0",
     "prettier": "2.8.8",
     "husky": "8.0.3",
