--- a/advanced-api/dynamic-remotes/app2/package.json
+++ b/advanced-api/dynamic-remotes/app2/package.json
@@ -4,16 +4,16 @@
   "devDependencies": {
     "@babel/core": "7.23.7",
     "@babel/preset-react": "7.23.3",
+    "@module-federation/enhanced": "^0.0.8",
+    "@rspack/cli": "0.5.0",
+    "@rspack/core": "0.5.0",
+    "@rspack/dev-server": "0.5.0",
     "babel-loader": "9.1.3",
     "html-webpack-plugin": "5.6.0",
     "serve": "14.2.1",
     "webpack": "5.89.0",
     "webpack-cli": "5.1.4",
-    "webpack-dev-server": "4.15.1",
-    "@rspack/core": "0.4.5-canary-ac74516-20240102083734",
-    "@rspack/cli": "0.5.0",
-    "@rspack/dev-server": "0.4.5-canary-ac74516-20240102083734",
-    "@module-federation/enhanced": "^0.0.8"
+    "webpack-dev-server": "4.15.1"
   },
   "scripts": {
     "start": "rspack serve",
@@ -24,8 +24,8 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "moment": "^2.29.4",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "moment": "^2.29.4"
+    "react-dom": "^16.13.0"
   }
 }
