--- a/angular15-vue3/vue-remote/package.json
+++ b/angular15-vue3/vue-remote/package.json
@@ -10,10 +10,10 @@
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-router": "5.0.8",
-    "@vue/cli-service": "5.0.8",
     "@rsbuild/core": "^0.2.15",
     "@rsbuild/plugin-vue": "^0.2.15",
-    "@rspack/core": "^0.4.5"
+    "@rspack/core": "^0.5.0",
+    "@vue/cli-plugin-router": "5.0.8",
+    "@vue/cli-service": "5.0.8"
   }
 }
