--- a/runtime-plugins/control-sharing/app1/package.json
+++ b/runtime-plugins/control-sharing/app1/package.json
@@ -4,17 +4,17 @@
   "devDependencies": {
     "@babel/core": "7.23.7",
     "@babel/preset-react": "7.23.3",
+    "@module-federation/enhanced": "0.0.0-next-20240112082805",
+    "@module-federation/runtime": "0.0.0-next-20240112082805",
+    "@rspack/cli": "^0.5.0",
+    "@rspack/core": "^0.5.0",
+    "@rspack/dev-server": "^0.5.0",
     "babel-loader": "9.1.3",
     "html-webpack-plugin": "5.6.0",
     "serve": "14.2.1",
-    "@rspack/core": "^0.5.0",
-    "@rspack/cli": "^0.5.0",
-    "@rspack/dev-server": "^0.5.0",
     "webpack": "5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "@module-federation/runtime": "next",
-    "@module-federation/enhanced": "next"
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
     "start": "rspack serve -c rspack.config.js",
@@ -25,8 +25,8 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "lodash": "^4.17.21"
+    "react-dom": "^17.0.2"
   }
 }
