--- a/.gitignore
+++ b/.gitignore
@@ -132,7 +132,7 @@ buildServer
 **/cypress/report/**
 /federated-express-routes/host/build/
 /federated-express-routes/remote/build/
-/comprehensive-demo-react*/*/public/*.js
-/comprehensive-demo-react*/*/public/*.css
+/comprehensive-demo-react*/**/public/*.js
+/comprehensive-demo-react*/**/public/*.css
 *.map
 
