--- a/comprehensive-demo-react18/app-01/package.json
+++ b/comprehensive-demo-react18/app-01/package.json
@@ -22,8 +22,8 @@
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production rspack build --mode production",
-    "legacy:build": "cross-env NODE_ENV=production webpack",
-    "start": "rspack cross-env NODE_ENV=production --watch",
+    "legacy:build": "cross-env NODE_ENV=production webpack --mode production",
+    "start": "rspack --watch",
     "legacy:start": "webpack --watch",
     "dev": "rspack serve",
     "legacy:dev": "webpack-dev-server --content-base public",
