Update module-federation dependencies and remove runtimePlugins
Updated "@module-federation/runtime" and "@module-federation/enhanced" dependencies in "app1", "app2", and "app3" from "next" version to "0.0.8". Removed "runtimePlugins" from "webpack.config.js" and "rspack.config.js" in "app2" and "app3". Also, added a new "pick-remote.ts" file in "app1" for custom plugin implementation. Made a minor change in "App.js" located in "app2/src" to update a heading element.

--- a/runtime-plugins/remote-control/app1/package.json
+++ b/runtime-plugins/remote-control/app1/package.json
@@ -13,8 +13,8 @@
     "webpack": "5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "@module-federation/runtime": "next",
-    "@module-federation/enhanced": "next"
+    "@module-federation/runtime": "0.0.8",
+    "@module-federation/enhanced": "0.0.8"
   },
   "scripts": {
     "start": "rspack serve -c rspack.config.js",
