--- a/runtime-plugins/remote-control/app3/package.json
+++ b/runtime-plugins/remote-control/app3/package.json
@@ -13,8 +13,8 @@
     "webpack": "5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "@module-federation/runtime": "next",
-    "@module-federation/enhanced": "next"
+    "@module-federation/runtime": "0.0.8",
+    "@module-federation/enhanced": "0.0.8"
   },
   "scripts": {
     "start": "rspack serve -c rspack.config.js",
