--- a/runtime-plugins/remote-control/app1/package.json
+++ b/runtime-plugins/remote-control/app1/package.json
@@ -7,14 +7,14 @@
     "babel-loader": "9.1.3",
     "html-webpack-plugin": "5.6.0",
     "serve": "14.2.1",
-    "@rspack/core": "^0.4.5",
+    "@rspack/core": "^0.5.0",
     "@rspack/cli": "^0.5.0",
-    "@rspack/dev-server": "^0.4.5",
+    "@rspack/dev-server": "^0.5.0",
     "webpack": "5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "@module-federation/runtime": "next",
-    "@module-federation/enhanced": "next"
+    "@module-federation/runtime": "0.0.8",
+    "@module-federation/enhanced": "0.0.8"
   },
   "scripts": {
     "start": "rspack serve -c rspack.config.js",
