--- a/advanced-api/dynamic-remotes-runtime-environment-variables/host/package.json
+++ b/advanced-api/dynamic-remotes-runtime-environment-variables/host/package.json
@@ -13,7 +13,8 @@
     "webpack-dev-server": "4.15.1",
     "@rspack/core": "^0.4.5",
     "@rspack/cli": "^0.5.0",
-    "@rspack/dev-server": "^0.4.5"
+    "@rspack/dev-server": "^0.4.5",
+    "@module-federation/enhanced": "^0.0.9"
   },
   "scripts": {
     "start": "chmod +x ./env.sh && cp env-config.json ./public/ && rspack serve",
