--- a/advanced-api/dynamic-remotes-synchronous-imports/app1/package.json
+++ b/advanced-api/dynamic-remotes-synchronous-imports/app1/package.json
@@ -9,7 +9,8 @@
     "serve": "14.2.1",
     "webpack": "5.89.0",
     "webpack-cli": "5.1.4",
-    "webpack-dev-server": "4.15.1"
+    "webpack-dev-server": "4.15.1",
+    "@module-federation/enhanced": "^0.0.9"
   },
   "scripts": {
     "start": "webpack-cli serve",
