Update dependencies to use enhanced ModuleFederationPlugin (#3585)
* Update dependencies to use enhanced ModuleFederationPlugin

Enhanced ModuleFederationPlugin from '@module-federation/enhanced' is now being used in place of the previous module federation plugin. This change is reflected in various package.json and webpack.config.js files. An unnecessary file, ExternalTemplateRemotesPlugin.js, has also been deleted. The update improves module federation configuration and also simplifies the project setup by removing unnecessary configurations.

* locks

--- a/advanced-api/automatic-vendor-sharing/app1/package.json
+++ b/advanced-api/automatic-vendor-sharing/app1/package.json
@@ -12,7 +12,8 @@
     "@rspack/dev-server": "^0.5.0",
     "webpack": "5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "@module-federation/enhanced": "^0.0.9"
   },
   "scripts": {
     "start": "rspack serve -c rspack.config.js",
