--- a/advanced-api/automatic-vendor-sharing/app2/package.json
+++ b/advanced-api/automatic-vendor-sharing/app2/package.json
@@ -12,7 +12,8 @@
     "@rspack/dev-server": "^0.5.0",
     "webpack": "5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "@module-federation/enhanced": "^0.0.9"
   },
   "scripts": {
     "start": "rspack serve -c rspack.config.js",
