--- a/advanced-api/dynamic-remotes-runtime-environment-variables/remote/package.json
+++ b/advanced-api/dynamic-remotes-runtime-environment-variables/remote/package.json
@@ -12,7 +12,8 @@
     "webpack-dev-server": "4.15.1",
     "@rspack/core": "^0.5.0",
     "@rspack/cli": "^0.5.0",
-    "@rspack/dev-server": "^0.5.0"
+    "@rspack/dev-server": "^0.5.0",
+    "@module-federation/enhanced": "^0.0.9"
   },
   "scripts": {
     "start": "chmod +x ./env.sh && cp env-config.json ./public/ && rspack serve",
