--- a/federated-npm/package.json
+++ b/federated-npm/package.json
@@ -10,10 +10,13 @@
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm --filter federated-npm_* --parallel start",
+    "legacy:start": "pnpm --filter federated-npm_* --parallel legacy:start",
     "build": "pnpm --filter build",
+    "legacy:build": "pnpm --filter legacy:build",
     "serve": "pnpm --filter federated-npm_* --parallel serve",
     "clean": "pnpm --filter federated-npm_* --parallel clean",
-    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome",
+    "legacy:e2e:ci": "pnpm legacy:start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.2.0"
