--- a/federated-npm/app3/package.json
+++ b/federated-npm/app3/package.json
@@ -9,17 +9,24 @@
     "serve": "14.2.1",
     "webpack": "5.89.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.15.1"
+    "webpack-dev-server": "4.15.1",
+    "@rspack/cli": "0.5.1",
+    "@rspack/core": "0.5.1",
+    "@rspack/dev-server": "0.5.1",
+    "@module-federation/enhanced": "^0.0.9"
   },
   "scripts": {
-    "start": "webpack-cli serve",
-    "build": "webpack --mode production",
+    "start": "rspack serve",
+    "build": "rspack build --mode production",
+    "legacy:start": "webpack-cli serve",
+    "legacy:build": "webpack --mode production",
     "serve": "serve dist -p 3003",
     "clean": "rm -rf dist"
   },
   "dependencies": {
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "qs": "^6.11.2"
   }
 }
