Add federated-npm package and update output.md
This commit adds 'federated-npm' to existing packages and updates the package description in package.json. In addition, 'federated-npm' is also added to output.md, providing clarifications on its use and support for different file packs.

--- a/federated-npm/package.json
+++ b/federated-npm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "federated-npm",
   "private": true,
-  "ignored": true,
+  "description": "Use Unpkg or esm.sh to retrieve all shared modules needed. Allowing you to access all of npm on demand",
   "workspaces": [
     "./app1",
     "./app2",
