chore: use rspack+modernjs

--- a/modernjs/package.json
+++ b/modernjs/package.json
@@ -10,5 +10,7 @@
     "clean": "concurrently \"cd ./host && pnpm clean\" \"cd ./provider && pnpm clean\"",
     "e2e:ci": "pnpm run build && echo \"No e2e tests yet\""
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "concurrently": "^7.6.0"
+  }
 }
