--- a/umijs-react-ts-demo/app2/package.json
+++ b/umijs-react-ts-demo/app2/package.json
@@ -12,6 +12,8 @@
     "umi": "^4.1.1"
   },
   "devDependencies": {
+    "@module-federation/enhanced": "^0.0.10",
+    "@module-federation/runtime": "^0.0.10",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "typescript": "^5.3.3",
