--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,3 +7,4 @@ packages:
   - '!multi-threaded-ssr/website2'
   - '!nextjs-ssr/*'
   - '!cra-react-app-rewired/*'
+  - '!runtime-plugins/remote-router'
