Add "e2e:ci" script in remote-router's package.json file
This commit adds a new script called "e2e:ci" in the package.json file for remote-router. It's a placeholder command echoing 'no tests' for now, meant to indicate where end-to-end tests for continuous integration would eventually go.

--- a/runtime-plugins/remote-router/package.json
+++ b/runtime-plugins/remote-router/package.json
@@ -2,6 +2,7 @@
   "name": "remote-router",
   "description": "A ingress host who can dynamically load and control all remotes",
   "scripts": {
-    "start": "pnpm --filter remote-router* --parallel start"
+    "start": "pnpm --filter remote-router* --parallel start",
+    "e2e:ci": "echo 'no tests'"
   }
 }
