Update dependencies and add "e2e:ci" script in package.json files
The commit introduces a modification to the dependencies by switching the associated version of html-webpack-plugin to the rspack core instead of webpack. It also adds a "e2e:ci" script to both host and remotes-monorepo package.json files, serving as a placeholder for future end-to-end tests.

--- a/runtime-plugins/remote-router/remotes-monorepo/package.json
+++ b/runtime-plugins/remote-router/remotes-monorepo/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "preinstall": "find . -name \"noexist\" -type d -prune -exec rm -rf '{}' +; pnpm install --ignore-scripts",
-    "start": "nx run-many -t serve"
+    "start": "nx run-many -t serve",
+    "e2e:ci": "echo 'no tests'"
   },
   "private": true,
   "devDependencies": {
