--- a/runtime-plugins/remote-router/host/package.json
+++ b/runtime-plugins/remote-router/host/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "webpack --mode=production",
     "build:prod": "webpack --mode=production --node-env=production",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "e2e:ci": "echo 'no tests'"
   },
   "dependencies": {
     "react": "18.2.0",
