Runtime Plugins - Annotate Import Files

--- a/runtime-plugins/remote-router/package.json
+++ b/runtime-plugins/remote-router/package.json
@@ -4,5 +4,10 @@
   "scripts": {
     "start": "pnpm --filter remote-router* --parallel start",
     "e2e:ci": "echo 'no tests'"
-  }
+  },
+  "scannableFiles": [
+    "./host/config/runtimePlugin.js",
+    "./host/config/webpack.config.modulefederation.js",
+    "./host/src/features/Home/Home.jsx"
+  ]
 }
