--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,7 @@ packages:
   - '!angular14-react/*'
   - '!test'
   - '!multi-threaded-ssr/website2'
+  - '!native-federation-react'
   - '!nextjs-ssr/*'
   - '!cra-react-app-rewired/*'
   - '!runtime-plugins/remote-router'
