--- a/renovate.json
+++ b/renovate.json
@@ -14,6 +14,31 @@
   ],
   "packageRules": [
     {
+      "matchFileNames": [
+        "version-discrepancy/app1/package.json",
+        "version-discrepancy/app2/package.json"
+      ],
+      "ignoreDeps": ["lodash"]
+    },
+    {
+      "matchFileNames": [
+        "different-react-versions-16-17/app1/package.json",
+        "different-react-versions-16-17/app2/package.json",
+        "different-react-versions-16-17-typescript/app2/package.json",
+        "different-react-versions-16-17-typescript/app1/package.json",
+        "different-react-versions-16-17-typescript/app1/package.json",
+        "different-react-versions/app1/package.json",
+        "different-react-versions/app2/package.json",
+        "different-react-versions-16-17-typescript/app1/package.json",
+        "different-react-versions-16-17-typescript/app2/package.json",
+        "different-react-versions-isolated/app1/package.json",
+        "different-react-versions-isolated/app2/package.json",
+        "different-react-versions-typescript/app2/package.json",
+        "different-react-versions-typescript/app1/package.json"
+      ],
+      "ignoreDeps": ["lodash"]
+    },
+    {
       "matchFileNames": ["version-discrepancy/app1/package.json"],
       "ignoreDeps": ["lodash"]
     },
