move to enhanced package

--- a/cra-react-app-rewired/remote/package.json
+++ b/cra-react-app-rewired/remote/package.json
@@ -2,6 +2,7 @@
   "name": "cra-react-app-rewired_remote",
   "version": "0.1.0",
   "dependencies": {
+    "@module-federation/enhanced": "^0.0.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -27,15 +28,15 @@
     ]
   },
   "devDependencies": {
-    "customize-cra": "1.0.0",
-    "react-app-rewired": "2.2.1",
-    "webpack": "5.89.0",
-    "typescript": "5.2.2",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/jest-dom": "6.1.4",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "29.5.12",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
-    "@types/jest": "29.5.12",
-    "mini-css-extract-plugin": "^2.7.6"
+    "customize-cra": "1.0.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "react-app-rewired": "2.2.1",
+    "typescript": "5.2.2",
+    "webpack": "5.89.0"
   }
 }
