--- a/dynamic-remotes-node/package.json
+++ b/dynamic-remotes-node/package.json
@@ -11,8 +11,8 @@
     "import-remote": "node import-remote.js"
   },
   "dependencies": {
-    "@module-federation/node": "^0.16.0",
-    "@module-federation/utilities": "^1.5.0",
+    "@module-federation/node": "next",
+    "@module-federation/runtime": "next",
     "concurrently": "^8.0.1",
     "webpack": "5.89.0",
     "rimraf": "^5.0.5",
