apollo client to use enhanced federation

--- a/package.json
+++ b/package.json
@@ -202,7 +202,8 @@
     "serve": "14.2.1",
     "typescript": "5.2.2",
     "wait-on": "7.2.0",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "semver": "^7.6.0"
   },
   "scripts": {
     "list:all": "pnpm list --filter \"*\" --only-projects --depth -1 --json",
