--- a/apollo-client/app1/package.json
+++ b/apollo-client/app1/package.json
@@ -27,7 +27,7 @@
     "@babel/preset-env": "7.23.8",
     "@babel/preset-react": "7.23.3",
     "@babel/preset-typescript": "7.23.3",
-    "@module-federation/node": "0.16.2",
+    "@module-federation/node": "^2.0.11",
     "@types/express": "4.17.14",
     "@types/react": "18.2.62",
     "@types/react-dom": "18.2.19",
