--- a/loadable-react-16/app1/package.json
+++ b/loadable-react-16/app1/package.json
@@ -29,7 +29,7 @@
     "@babel/preset-env": "7.23.8",
     "@babel/preset-react": "7.23.3",
     "@babel/preset-typescript": "7.23.3",
-    "@module-federation/node": "0.16.2",
+    "@module-federation/node": "^2.0.11",
     "@types/express": "4.17.14",
     "@types/loadable__server": "5.12.10",
     "@types/react": "18.2.62",
