--- a/nextjs-v14/shop/package.json
+++ b/nextjs-v14/shop/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shop",
+  "name": "nextjs-v14_shop",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^8.1.8",
+    "@module-federation/nextjs-mf": "^8.1.10",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
