--- a/nextjs-ssr/home/package.json
+++ b/nextjs-ssr/home/package.json
@@ -7,7 +7,7 @@
     "start": "NEXT_PRIVATE_LOCAL_WEBPACK=true NODE_ENV=production next start -p 3001"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "8.1.10",
+    "@module-federation/nextjs-mf": "next",
     "lodash": "4.17.21",
     "next": "^14.0.3",
     "react": "^18.2.0",
