--- a/nextjs-v14/home/package.json
+++ b/nextjs-v14/home/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "rm -rf .next &&  NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 3001",
-    "build": "next build",
+    "build": "NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^8.1.10",
+    "@module-federation/nextjs-mf": "^8.2.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
