--- a/react-nextjs/nextjs-host-react-remote/host/package.json
+++ b/react-nextjs/nextjs-host-react-remote/host/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "8.1.10",
+    "@module-federation/nextjs-mf": "^8.2.0",
     "next-transpile-modules": "9.1.0",
     "next": "12.3.4",
     "react": "18.2.0",
