--- a/dynamic-remotes-node/package.json
+++ b/dynamic-remotes-node/package.json
@@ -11,7 +11,7 @@
     "import-remote": "node import-remote.js"
   },
   "dependencies": {
-    "@module-federation/node": "next",
+    "@module-federation/node": "^2.0.11",
     "@module-federation/runtime": "next",
     "concurrently": "^8.0.1",
     "webpack": "5.89.0",
