--- a/react-18-ssr/remote2/package.json
+++ b/react-18-ssr/remote2/package.json
@@ -27,6 +27,7 @@
     "rimraf": "3.0.2",
     "webpack": "5.89.0",
     "webpack-cli": "4.9.2",
+    "@module-federation/enhanced": "^0.0.13",
     "webpack-merge": "5.10.0"
   }
 }
