--- a/simple-node/node-local-remote/package.json
+++ b/simple-node/node-local-remote/package.json
@@ -5,7 +5,7 @@
     "start": "webpack serve --config webpack.config.js"
   },
   "dependencies": {
-    "@module-federation/node": "next"
+    "@module-federation/node": "^2.0.11"
   },
   "devDependencies": {
     "webpack": "5.89.0",
