--- a/cloud/azure-functions-node-v4/remote/package.json
+++ b/cloud/azure-functions-node-v4/remote/package.json
@@ -15,7 +15,8 @@
     "@babel/preset-react": "7.23.3",
     "@babel/preset-typescript": "7.23.3",
     "babel-loader": "8.2.5",
-    "@module-federation/node": "0.16.2",
+    "@module-federation/enhanced": "^0.0.13",
+    "@module-federation/node": "^2.0.11",
     "tsconfig-paths-webpack-plugin": "3.5.2",
     "html-webpack-plugin": "5.6.0",
     "rimraf": "5.0.5",
