--- a/cloud/azure-functions-node-v4/shell/client/package.json
+++ b/cloud/azure-functions-node-v4/shell/client/package.json
@@ -23,7 +23,8 @@
 		"webpack": "5.89.0",
 		"webpack-cli": "4.10.0",
 		"webpack-dev-server": "4.15.1",
-		"webpack-livereload-plugin": "3.0.2"
+		"webpack-livereload-plugin": "3.0.2",
+		"@module-federation/enhanced": "^0.0.13"
 	},
 	"dependencies": {
 		"react": "18.2.0",
