--- a/cloud/azure-functions-node-v4/shell/api/package.json
+++ b/cloud/azure-functions-node-v4/shell/api/package.json
@@ -10,8 +10,8 @@
 	},
 	"dependencies": {
 		"@azure/functions": "^4.0.0-alpha.9",
-		"@module-federation/utilities": "1.5.0",
-		"@module-federation/node": "0.16.2",
+		"@module-federation/node": "^2.0.11",
+		"@module-federation/runtime": "^0.0.13",
 		"memory-stream": "1.0.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
