--- a/cloud/azure-functions-node-v4/package.json
+++ b/cloud/azure-functions-node-v4/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "build": "concurrently \"rm -r ./shell/api/dist || true && cd ./shell/client && npm run build && cd ../api && npm run build\" \"cd ./remote && npm run build\"",
-    "start": "concurrently \"cd remote && npm run start\" \"cd shell/api && npm run start\" \"cd remote && npm run start\""
+    "start": "concurrently \"cd remote && npm run start\" \"cd shell/api && npm run start\""
   },
   "devDependencies": {
     "concurrently": "8.0.1"
