--- a/federated-css/consumers-nextjs/combination-of-4/package.json
+++ b/federated-css/consumers-nextjs/combination-of-4/package.json
@@ -7,7 +7,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "8.1.10",
+    "@module-federation/nextjs-mf": "^8.2.0",
     "css-loader": "^6.7.3",
     "next": "^13.1.1",
     "react": "^18.2.0",
