--- a/react-18-ssr/remote2/package.json
+++ b/react-18-ssr/remote2/package.json
@@ -19,7 +19,7 @@
     "@babel/preset-env": "7.23.8",
     "@babel/preset-react": "7.23.3",
     "@babel/preset-typescript": "7.23.3",
-    "@module-federation/node": "1.0.7",
+    "@module-federation/node": "^2.0.11",
     "@types/react": "18.2.62",
     "@types/react-dom": "18.2.19",
     "babel-loader": "8.2.5",
