--- a/react-18-server-2-server/app1/package.json
+++ b/react-18-server-2-server/app1/package.json
@@ -18,12 +18,13 @@
   "devDependencies": {
     "@babel/core": "7.24.0",
     "@babel/node": "7.23.9",
+    "@module-federation/enhanced": "^0.0.13",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/polyfill": "7.12.1",
     "@babel/preset-env": "7.23.8",
     "@babel/preset-react": "7.23.3",
     "@babel/preset-typescript": "7.23.3",
-    "@module-federation/node": "0.16.2",
+    "@module-federation/node": "^2.0.11",
     "@types/express": "4.17.14",
     "@types/react": "18.2.62",
     "@types/react-dom": "18.2.19",
