--- a/cra-react-app-rewired/host/package.json
+++ b/cra-react-app-rewired/host/package.json
@@ -18,6 +18,7 @@
     "start": "PORT=3000 react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
+    "serve": "serve ./build -p 3000",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {},
