--- a/cra-react-app-rewired/remote/package.json
+++ b/cra-react-app-rewired/remote/package.json
@@ -12,6 +12,7 @@
     "start": "PORT=3001 react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
+    "serve": "serve ./build -p 3001",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {},
