--- a/loadable-react-16/package.json
+++ b/loadable-react-16/package.json
@@ -7,6 +7,6 @@
     "build": "pnpm --filter loadable-react-16_* build",
     "serve": "pnpm --filter loadable-react-16_* --parallel serve",
     "clean": "pnpm --filter loadable-react-16_* --parallel clean",
-    "e2e:ci": "lsof -ti tcp:3000,3001,3002 | xargs kill && pnpm start & sleep 20 && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & sleep 20 && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome && lsof -ti tcp:3000,3001,3002 | xargs kill"
   }
 }
