--- a/nextjs-v14/home/package.json
+++ b/nextjs-v14/home/package.json
@@ -1,28 +1,20 @@
 {
-  "name": "nextjs-v14_home",
+  "name": "home-v14",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "rm -rf .next &&  NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 3001",
-    "build": "NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "next telemetry disable && NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
+    "start": "next start -p 3001"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^8.2.2",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "@module-federation/nextjs-mf": "^8.2.5",
+    "next": "^14.1.4",
+    "nextjs-shared-v14": "workspace:*",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "webpack": "5.90.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "18.2.64",
-    "@types/react-dom": "18.2.21",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "cross-env": "7.0.3"
   }
 }
