--- a/nextjs-v14/package.json
+++ b/nextjs-v14/package.json
@@ -3,13 +3,17 @@
   "private": true,
   "description": "Next.js 14 Example",
   "workspaces": [
+    "./checkout",
     "./home",
+    "./shared",
     "./shop"
   ],
   "version": "0.0.0",
   "scripts": {
-    "start": "concurrently \"npm --prefix home run dev\" \"npm --prefix shop run dev\"",
-    "e2e:ci": "concurrently \"npm --prefix home run build\" \"npm --prefix shop run build\""
+    "start": "concurrently \"npm --prefix checkout run dev\" \"npm --prefix home run dev\" \"npm --prefix shop run dev\"",
+    "build": "concurrently \"npm --prefix checkout run build\" \"npm --prefix home run build\" \"npm --prefix shop run build\"",
+    "serve": "concurrently \"npm --prefix checkout run start\" \"npm --prefix home run start\" \"npm --prefix shop run start\"",
+    "e2e:ci": "pnpm run build"
   },
   "dependencies": {
     "concurrently": "7.6.0"
