--- a/cra/host/package.json
+++ b/cra/host/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "start": "rsbuild dev",
-    "build": "rsbuild build"
+    "build": "rsbuild build",
+    "preview": "rsbuild preview"
   },
   "eslintConfig": {},
   "browserslist": {
@@ -23,8 +24,8 @@
     ]
   },
   "devDependencies": {
-    "@rsbuild/core": "^0.4.8",
-    "@rsbuild/plugin-react": "^0.4.8",
-    "@rspack/core": "^0.5.0"
+    "@rsbuild/core": "^0.5.3",
+    "@rsbuild/plugin-react": "^0.5.3",
+    "@rspack/core": "^0.5.8"
   }
 }
