fix: upgrade rsbuild implementation

--- a/cra/package.json
+++ b/cra/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "pnpm --filter cra_* start",
     "build": "pnpm --filter cra_* build",
-    "preview": "pnpm --filter cra_* preview",
+    "preview": "pnpm run build && pnpm --filter cra_* preview",
     "e2e:ci": "pnpm start & npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome && lsof -ti tcp:3000,3001,3002 | xargs kill"
   },
   "devDependencies": {
