--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,5 +7,6 @@ packages:
   - '!multi-threaded-ssr/website2'
   - '!native-federation-react'
   - '!nextjs-ssr/*'
+  - '!umd-federation/*'
   - '!cra-react-app-rewired/*'
   - '!runtime-plugins/remote-router'
