--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,7 +2,7 @@ packages:
   - '**/**'
   - '!docs'
   - '!cypress'
-  - '!remix'
+  - '!remix/*'
   - '!angular14-react/*'
   - '!test'
   - '!multi-threaded-ssr/website2'
