--- a/runtime-plugins/isolate-shared-dependencies/shared-lib/package.json
+++ b/runtime-plugins/isolate-shared-dependencies/shared-lib/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "shared-lib-2": "^1.0.0"
+    "shared-lib-2": "workspace:*"
   }
 }
