--- a/runtime-plugins/isolate-shared-dependencies/app3/package.json
+++ b/runtime-plugins/isolate-shared-dependencies/app3/package.json
@@ -18,8 +18,8 @@
   },
   "dependencies": {
     "@module-federation/runtime": "^0.0.17",
-    "shared-lib": "^1.0.0",
-    "shared-lib-2": "^1.0.0",
+    "shared-lib": "workspace:*",
+    "shared-lib-2": "workspace:*",
     "vue": "~2.6.14"
   }
 }
