fix package install

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,5 +8,6 @@ packages:
   - '!multi-threaded-ssr/website2'
   - '!native-federation-react'
   - '!nextjs-ssr/*'
+  - '!nextjs-dynamic-ssr/*'
   - '!cra-react-app-rewired/*'
   - '!runtime-plugins/remote-router'
