node runtime plugin rspack

--- a/simple-node/package.json
+++ b/simple-node/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
+    "start:legacy": "concurrently \"cd node-remote && pnpm start:legacy\" \"cd ./node-local-remote && pnpm start:legacy\" \"cd ./node-host && sleep 5; pnpm start:legacy\"",
     "start": "concurrently \"cd node-remote && pnpm start\" \"cd ./node-local-remote && pnpm start\" \"cd ./node-host && sleep 5; pnpm start\""
   },
   "dependencies": {
