--- a/simple-node/node-local-remote/package.json
+++ b/simple-node/node-local-remote/package.json
@@ -2,14 +2,18 @@
   "name": "node-local-remote",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js"
+    "start:legacy": "webpack serve --config webpack.config.js",
+    "start": "rspack serve --config rspack.config.js"
   },
   "dependencies": {
-    "@module-federation/node": "^2.1.4"
+    "@module-federation/node": "^0.0.0-next-20240415222600"
   },
   "devDependencies": {
     "webpack": "^5.91.0",
     "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^4.0.0"
+    "webpack-dev-server": "^4.0.0",
+    "@rspack/cli": "0.5.9",
+    "@rspack/core": "0.5.9",
+    "@rspack/dev-server": "0.5.9"
   }
 }
