chore: Apollo Rspack Federation

--- a/apollo-client/package.json
+++ b/apollo-client/package.json
@@ -3,13 +3,13 @@
   "description": "This example demonstrates using Apollo Client with Module Federation.",
   "version": "0.0.0",
   "scripts": {
-    "start:legacy": "pnpm --filter apollo-client_* --parallel start:legacy",
-    "build:legacy": "pnpm --filter apollo-client_* --parallel build:legacy",
+    "legacy:start": "pnpm --filter apollo-client_* --parallel legacy:start",
+    "legacy:build": "pnpm --filter apollo-client_* --parallel legacy:build",
     "start": "pnpm --filter apollo-client_* --parallel start",
     "serve": "pnpm --filter apollo-client_* --parallel serve",
     "build": "pnpm --filter apollo-client_* --parallel build",
     "e2e:ci": "kill-port 3001 3000 && pnpm build && pnpm serve & sleep 2 && wait-on tcp:3000 && wait-on tcp:3001 && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome",
-    "e2e:ci:legacy": "kill-port 3001 3000 && pnpm build:legacy && pnpm serve & sleep 5 && wait-on tcp:3000 && wait-on tcp:3001 && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "legacy:e2e:ci": "kill-port 3001 3000 && pnpm legacy:build && pnpm serve & sleep 5 && wait-on tcp:3000 && wait-on tcp:3001 && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "^7.2.0",
