--- a/apollo-client/app2/package.json
+++ b/apollo-client/app2/package.json
@@ -2,9 +2,9 @@
   "name": "apollo-client_app2",
   "version": "0.0.0",
   "scripts": {
-    "start:legacy": "pnpm build:legacy && pnpm serve",
+    "legacy:start": "pnpm legacy:build && pnpm serve",
     "serve": "node dist/server/main.js",
-    "build:legacy": "pnpm build:server:legacy && pnpm build:client:legacy",
+    "legacy:build": "pnpm build:server:legacy && pnpm build:client:legacy",
     "build": "pnpm build:server && pnpm build:client",
     "build:client:legacy": "rimraf dist/client && webpack --mode production --progress --config config/webpack.client.js",
     "build:client": "rimraf dist/client && rspack --mode production --config config/rspack.client.js",
