--- a/nextjs-react/package.json
+++ b/nextjs-react/package.json
@@ -10,7 +10,7 @@
   "main": "index.js",
   "scripts": {
     "start": "pnpm --parallel --filter nextjs-react_* run dev",
-    "e2e:ci": "pnpm start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/runAll.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & sleep 2 && wait-on http-get://localhost:3000/ && wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/runAll.cy.ts\" --browser=chrome"
   },
   "keywords": [],
   "author": "rahulteja-dev",
