update dash project to enhanced

--- a/dashboard-admin-react-rspack-material-ui/faq-app/package.json
+++ b/dashboard-admin-react-rspack-material-ui/faq-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "header-app",
+  "name": "@dashboard-admin/faq-app",
   "version": "0.1.0",
   "private": true,
   "homepage": "./",
@@ -35,6 +35,7 @@
     ]
   },
   "devDependencies": {
+    "@module-federation/enhanced": "^0.1.8",
     "@babel/core": "7.24.3",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/preset-env": "7.18.10",
