--- a/dashboard-admin-react-rspack-material-ui/root/package.json
+++ b/dashboard-admin-react-rspack-material-ui/root/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mfe-shell-container",
+  "name": "@dashboard-admin/mfe-shell-container",
   "version": "1.0.0",
   "description": "Shell container",
   "main": "index.js",
@@ -39,6 +39,7 @@
     "webpack": "^5.91.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.10.0",
-    "webpack-pwa-manifest": "^4.3.0"
+    "webpack-pwa-manifest": "^4.3.0",
+    "@module-federation/enhanced": "^0.1.8"
   }
 }
