--- a/dashboard-admin-react-rspack-material-ui/sidebar/package.json
+++ b/dashboard-admin-react-rspack-material-ui/sidebar/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mfe-left-nav",
+  "name": "@dashboard-admin/mfe-left-nav",
   "version": "1.0.0",
   "description": "Left Nav micro-frontend application",
   "main": "index.js",
@@ -37,7 +37,8 @@
     "style-loader": "3.3.4",
     "webpack": "^5.91.0",
     "webpack-cli": "5.1.4",
-    "webpack-dev-server": "4.10.0"
+    "webpack-dev-server": "4.10.0",
+    "@module-federation/enhanced": "^0.1.8"
   },
   "eslintConfig": {
     "extends": [
