--- a/dashboard-admin-react-rspack-material-ui/dashboard-app/package.json
+++ b/dashboard-admin-react-rspack-material-ui/dashboard-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "header-app",
+  "name": "@dashboard-admin/header-app",
   "version": "0.1.0",
   "private": true,
   "homepage": "./",
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@module-federation/enhanced": "^0.1.8",
     "@babel/core": "7.24.3",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/preset-env": "7.18.10",
@@ -50,6 +51,9 @@
     "style-loader": "3.3.4",
     "webpack": "^5.91.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.10.0"
+    "webpack-dev-server": "4.10.0",
+    "@rspack/core": "^0.6.2",
+    "@rspack/cli": "^0.6.2",
+    "@rspack/plugin-react-refresh": "^0.6.2"
   }
 }
