chore: update mf ecosystem

--- a/rspack_hmr/package.json
+++ b/rspack_hmr/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rspack-hmr",
   "scripts": {
-    "start": "pnpm run --filter '@rspack-hmr/*' dev",
-    "build": "pnpm run --filter '@rspack-hmr/*' build"
+    "start": "pnpm run --filter @rspack-hmr/* dev",
+    "build": "pnpm run --filter @rspack-hmr/* build"
   }
 }
