update typescript example

--- a/different-react-versions-typescript/app1/package.json
+++ b/different-react-versions-typescript/app1/package.json
@@ -2,7 +2,7 @@
   "name": "different-react-versions-typescript_app1",
   "version": "0.0.0",
   "scripts": {
-    "legacy:start": "webpack-cli serve",
+    "legacy:start": "webpack serve",
     "start": "rspack serve",
     "legacy:build": "webpack --mode production",
     "build": "rspack --mode production",
