--- a/different-react-versions-typescript/tsconfig.base.json
+++ b/different-react-versions-typescript/tsconfig.base.json
@@ -15,8 +15,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "baseUrl": ".",
     "paths": {
-      "@app1/*": ["./app1/src/*"],
-      "@app2/*": ["./app2/src/*"]
+      "*": ["./@mf-types/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
