debug alternative remote devtools

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -11,4 +11,4 @@ packages:
   - '!nextjs-dynamic-ssr/*'
   - '!cra-react-app-rewired/*'
   - '!runtime-plugins/remote-router'
-  - '!react-manifest-example'
+  - '!react-manifest-example/*'
