--- a/bi-directional/package.json
+++ b/bi-directional/package.json
@@ -12,7 +12,7 @@
     "build": "pnpm --filter bi-directional_* run build",
     "serve": "pnpm --filter bi-directional_* run serve",
     "clean": "pnpm --filter bi-directional_* run reset",
-    "e2e:ci": "pnpm build && pnpm serve & sleep 60 && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm build && pnpm serve & sleep 5 && wait-on tcp:3001 && wait-on tcp:3002 && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "concurrently": "8.2.2",
